clang/test/BSC/Negative/Trait/r1/definition_6/definition_6.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int a(); // expected-error {{the first parameter of _Trait member function must be 'This* this'}}
};

int main() {
  return 0;
}
